@@ -11,6 +11,10 @@ module API
         else issues.order('id DESC')
         end
       end
+
+      def filter_issues_labels(issues, labels)
+        issues.includes(:labels).where("labels.title" => labels.split(','))
+      end
     end
 
     resource :issues do
@@ -18,13 +22,21 @@ module API
       #
       # Parameters:
       #   state (optional) - Return "opened" or "closed" issues
-      #
+      #   labels (optional) - Comma-separated list of label names
+
       # Example Requests:
       #   GET /issues
       #   GET /issues?state=opened
       #   GET /issues?state=closed
+      #   GET /issues?labels=foo
+      #   GET /issues?labels=foo,bar
+      #   GET /issues?labels=foo,bar&state=opened
       get do
-        present paginate(filter_issues_state(current_user.issues, params['state'])), with: Entities::Issue
+        issues = current_user.issues
+        issues = filter_issues_state(issues, params[:state]) unless params[:state].nil?
+        issues = filter_issues_labels(issues, params[:labels]) unless params[:labels].nil?
+
+        present paginate(issues), with: Entities::Issue
       end
     end
 
@@ -34,13 +46,22 @@ module API
       # Parameters:
       #   id (required) - The ID of a project
       #   state (optional) - Return "opened" or "closed" issues
+      #   labels (optional) - Comma-separated list of label names
       #
       # Example Requests:
       #   GET /projects/:id/issues
       #   GET /projects/:id/issues?state=opened
       #   GET /projects/:id/issues?state=closed
+      #   GET /projects/:id/issues
+      #   GET /projects/:id/issues?labels=foo
+      #   GET /projects/:id/issues?labels=foo,bar
+      #   GET /projects/:id/issues?labels=foo,bar&state=opened
       get ":id/issues" do
-        present paginate(filter_issues_state(user_project.issues, params['state'])), with: Entities::Issue
+        issues = user_project.issues
+        issues = filter_issues_state(issues, params[:state]) unless params[:state].nil?
+        issues = filter_issues_labels(issues, params[:labels]) unless params[:labels].nil?
+
+        present paginate(issues), with: Entities::Issue
       end
 
       # Get a single project issue
